refactor(openapi): rename video path
